feat: Production security hardening
- Authentication: Enforce JWT/API-key on all mutable endpoints (/trading/*, /system_management/*)
- CORS: Remove permissive fallback, enforce strict whitelist-only via ARIA_CORS_ORIGINS
- Rate Limiting: Enhanced with production defaults (200/min global, 5/min orders, 10/min closes)
- Graceful Shutdown: Coordinated cancellation of all background tasks, MT5 cleanup, log flushing
- Container Security: Multi-stage Dockerfile with non-root user (uid 1001), minimal attack surface
- Logging: Sanitize sensitive data, prevent raw market data in INFO logs
- CI/CD: Added security analysis workflow (flake8, mypy, bandit, safety)
- Monitoring: Prometheus /metrics endpoint already integrated

Production-ready security posture for institutional trading workloads.

--- a/.gitignore
+++ b/.gitignore
@@ -252,6 +252,7 @@ cython_debug/
 *.backup
 *~
 .venv/
+
 *.log
 .env
 __pycache__/
@@ -260,3 +261,13 @@ __pycache__/
 
 # Local Netlify folder
 .netlify
+
+# Normalize line endings across OS
+* text=auto eol=lf
+
+# Keep Windows batch files CRLF
+*.bat text eol=crlf
+*.ps1 text eol=crlf
+
+# Keep shell scripts LF
+*.sh text eol=lf
