--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,279 @@
-fastapi
-python-multipart>=0.0.9
-uvicorn==0.30.1
-python-dotenv==1.0.1
-httpx
-pytest
-pytest-json-report>=1.5.0
-MetaTrader5==5.0.4424; platform_system == "Windows"
-pydantic
-websockets
-pybind11
-numpy==1.26.4
-scipy==1.13.1
-requests
-psutil
-onnxruntime==1.18.1
-Pillow>=10,<12
-tensorflow==2.18.0
-pandas==2.2.2
+absl-py==2.3.1
+aiodns==3.5.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.9.5
-
-slowapi>=0.1.9
-pybreaker>=1.0.0
-prometheus-client>=0.19.0
-sqlalchemy>=1.4,<3.0
-redis>=5.0.0
-
-# ML meta-optimizer dependencies
-scikit-learn==1.5.1
-joblib>=1.3,<2
+aiokafka==0.10.0
+aiosignal==1.4.0
+alembic==1.13.3
+altair==5.5.0
+amqp==5.3.1
+annotated-types==0.7.0
+anthropic==0.59.0
+anyio==4.9.0
+APScheduler==3.11.0
+asttokens==3.0.0
+astunparse==1.6.3
+async-timeout==5.0.1
+asyncio==3.4.3
+asyncio-mqtt==0.13.0
+asyncpg==0.30.0
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+bidict==0.23.1
+billiard==4.2.1
+binwalk==2.1.0
+black==25.1.0
+blinker==1.9.0
+build==1.3.0
+cachetools==5.5.2
+ccxt==4.4.99
+celery==5.5.3
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cloudpickle==3.1.1
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.7.0
+comm==0.2.2
+contourpy==1.3.2
+coverage==7.9.2
+cryptography==45.0.5
+curl_cffi==0.12.0
+cycler==0.12.1
+debugpy==1.8.15
+decorator==5.2.1
+Deprecated==1.2.18
+discord.py==2.5.2
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+eventlet==0.33.3
+executing==2.2.0
+Farama-Notifications==0.0.4
+fastapi==0.116.1
+fastapi-cli==0.0.8
+feedparser==6.0.11
+filelock==3.18.0
+flake8==7.3.0
+Flask==3.0.3
+flask-cors==6.0.1
+Flask-SocketIO==5.3.5
+flatbuffers==25.2.10
+fonttools==4.59.0
+frozendict==2.4.6
+frozenlist==1.7.0
+fsspec==2025.7.0
+gast==0.6.0
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+google-pasta==0.2.0
+greenlet==3.2.3
+grpcio==1.74.0
+gymnasium==1.2.0
+h11==0.16.0
+h5py==3.14.0
+hiredis==3.2.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.27.0
+huggingface-hub==0.34.3
+humanfriendly==10.0
+idna==3.10
+iniconfig==2.1.0
+intel-openmp==2021.4.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+isort==6.0.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+keras==3.10.0
+kiwisolver==1.4.8
+kombu==5.5.4
+libclang==18.1.1
+limits==5.4.0
+llama_cpp_python==0.3.15
+loguru==0.7.3
+Mako==1.3.10
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+MetaTrader5==5.0.4424
+mkl==2021.4.0
+ml-dtypes==0.4.1
+motor==3.7.1
+mpmath==1.3.0
+multidict==6.6.3
+multitasking==0.0.12
+mypy==1.17.0
+mypy_extensions==1.1.0
+namex==0.1.0
+narwhals==1.45.0
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==1.26.4
+oauthlib==3.3.1
+onnx==1.18.0
+onnxmltools==1.14.0
+onnxruntime==1.18.1
+openai==1.97.0
+opt_einsum==3.4.0
+optree==0.17.0
+orjson==3.11.1
+packaging==25.0
+paho-mqtt==2.1.0
+pandas==1.5.3
+pandas_ta==0.3.14b0
+parso==0.8.4
+passlib==1.7.4
+pathspec==0.12.1
+peewee==3.18.2
+pillow==11.3.0
+pip-autoremove==0.10.0
+pip-tools==7.5.0
+platformdirs==4.3.8
+plotly==6.2.0
+pluggy==1.6.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
+propcache==0.3.2
+protobuf==4.25.8
+psutil==5.9.8
+psycopg2-binary==2.9.10
+pure_eval==0.2.3
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybind11==3.0.0
+pybreaker==1.4.0
+pycares==4.10.0
+pycodestyle==2.14.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.18.2
+pydeck==0.9.1
+pyflakes==3.4.0
+Pygments==2.19.2
+PyJWT==2.8.0
+pymongo==4.14.0
+pyparsing==3.2.3
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+pytest==8.4.1
+pytest-anyio==0.0.0
+pytest-asyncio==0.21.1
+pytest-cov==6.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.8.2
+python-jose==3.5.0
+python-multipart==0.0.20
+python-socketio==5.10.0
+python-telegram-bot==22.3
+pytz==2025.2
+pywin32==311
+PyYAML==6.0.2
+pyzmq==27.0.0
+ratelimit==2.2.1
+redis==5.0.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.31.0
+requests-oauthlib==2.0.0
+rich==14.1.0
+rich-toolkit==0.14.9
+rpds-py==0.26.0
+rsa==4.9.1
+safetensors==0.6.1
+schedule==1.2.2
+scikit-learn==1.7.1
+scipy==1.16.1
+seaborn==0.13.2
+sentence-transformers==5.1.0
+sentry-sdk==2.33.2
+sgmllib3k==1.0.0
+shellingham==1.5.4
+simple-websocket==1.1.0
+six==1.17.0
+skl2onnx==1.19.1
+slowapi==0.1.9
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+stable_baselines3==2.7.0
+stack-data==0.6.3
+starlette==0.47.2
+streamlit==1.46.1
+structlog==25.4.0
+sympy==1.14.0
+ta==0.11.0
+tbb==2021.13.1
+tenacity==9.1.2
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow_intel==2.18.0
+termcolor==3.1.0
+textblob==0.19.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toml==0.10.2
+torch==2.8.0+cpu
+torchaudio==2.7.1+cu118
+torchvision==0.22.1+cu118
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.42.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+ujson==5.10.0
+urllib3==2.5.0
+uvicorn==0.30.1
+vine==5.1.0
+watchdog==6.0.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+win32_setctime==1.2.0
+wrapt==1.14.1
+wsproto==1.2.0
+xgboost==2.0.3
+yarl==1.20.1
+yfinance==0.2.65
