--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,53 +2,62 @@
   "name": "aria-institutional-pro",
   "version": "1.2.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "clean": "rimraf node_modules .vite dist"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.0.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^2.2.7",
-    "@mui/material": "^6.1.6",
-    "@mui/x-charts": "^7.22.2",
-    "@mui/x-data-grid": "^7.22.2",
-    "@mui/x-date-pickers": "^7.22.2",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@types/d3": "^7.4.3",
-    "antd": "^5.27.1",
-    "chart.js": "^4.5.0",
-    "d3": "^7.9.0",
-    "plotly.js": "^2.35.2",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@mui/x-data-grid": "^6.19.0",
+    "@mui/x-date-pickers": "^6.19.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.28.5",
+    "antd": "^5.8.6",
+    "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
+    "framer-motion": "^11.0.8",
+    "plotly.js": "^2.24.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2",
-    "recharts": "^2.13.3",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^3.4.7",
-    "zustand": "^5.0.2"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.2",
+    "tailwindcss": "^3.3.5",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/geojson": "^7946.0.16",
+    "@types/node": "^20.19.11",
+    "@types/parse-json": "^4.0.2",
+    "@types/prop-types": "^15.7.15",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-plotly.js": "^2.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "@vitejs/plugin-react": "^5.0.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "postcss": "^8.4.49",
-    "typescript": "^5.9.2",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.0",
     "vite": "^7.1.3"
   }
 }
